@@ -3,6 +3,8 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- separate smart home/end settings
+- shift left/right moves caret in odd ways
 - change indentPrevLine to indentOneLine and indentSubsequentLines
 - better trailing EOL handling
 - minor quicknotepad changes -- update docs
